# protanki-server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.gradle.kts  settings.gradle.kts
.circleci/: config.yml
.github/: release.yml
.github/workflows/: release.yml  test.yml
docs/: README.md  building.md  database.md
protocol/: .gitignore  Cargo.toml  README.md  build.rs
protocol/definitions/: codecs.yaml  packets.yaml
protocol/src/: lib.rs
protocol/src/codec/: error.rs  mod.rs  option.rs  primitives.rs  registry.rs  string.rs  test.rs  vec.rs
protocol/src/crypto/: empty.rs  error.rs  mod.rs  xor.rs
protocol/src/packet/: enums.rs  mod.rs  registered.rs  registry.rs  structs.rs  unknown.rs
src/: main.rs
src/main/resources/: log4j.properties  logback.xml  maps.json
src/main/resources/data/: maps.json  proplibs.json  shots-data.json  skyboxes.json
src/main/resources/data/lang/: EN.json  RU.json  en.json  ru.json
src/main/resources/data/maps/2042/: summer-day.json  winter-day.json
src/main/resources/data/maps/abyss/: summer-day.json  winter-day.json
src/main/resources/data/resources/: auth-untrusted.json  auth.json  garage.json  lobby.json
src/main/resources/lang/: ru.json
src/main/resources/resources/: auth.json  garage.json  lobby.json  shots-data.json
src/main/resources/resources/maps/: sandbox-summer-1.json  sandbox-summer-2.json  sandbox-summer-3.json
src/network/: connection.rs  error.rs  mod.rs  server.rs  socket.rs
(+636 files in other folders)
