[package]
name = "protanki-server"
version = "2.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "sync", "fs", "net", "time", "macros"] }
protocol = { path = "protocol" }
anyhow = "1.0.71"
byteorder = "1.4.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
futures-util = "0.3.28"
thiserror = "1.0.40"
tracing-appender = "0.2.2"
