[package]
name = "protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4.3"
futures-util = "0.3.28"
paste = "1.0.12"
rand = "0.8.5"
thiserror = "1.0.40"
tracing = "0.1.37"

[build-dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.9.21"
convert_case = "0.6.0"
indoc = "2.0.1"
serde_with = "3.0.0"
